# ForSemesterProject

./: CMakeLists.txt  Calculations.cpp  Calculations.h  ForSemesterProject.sln  ForSemesterProject.vcxproj  ForSemesterProject.vcxproj.filters  README.md  TrajectoryVisualizer.cpp  TrajectoryVisualizer.h  UserInterface.cpp  UserInterface.h  main.cpp
For TXT/: ForAllCode.docx  ForAllCode.txt  code_forChanges.txt  code_main.txt
